--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 {% if user.is_authenticated %}
-    <p>{{ request.user.username }} :: {{ request.user.email }} ::
+    <p><a href="{% url 'Inventario:index' %}">Home</a> ::
+        {{ user.username }} :: {{ user.email }} ::
+        <a href="{% url 'Inventario:perfilUsuario' %}">Mi Perfil</a> ::
         <a href="{% url 'logout' %}">Logout</a>
     </p>
 {% endif %}
