--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,17 +1,49 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
+
+{% block extra_head %}
+    <link rel="stylesheet" href="{% static 'Inventario/css/toggle.css' %}">
+{% endblock %}
 
 {% block content %}
-    <form action="{% url 'Inventario:registrar' %}" method="post">
-        {% csrf_token %}
-        {{ form.errors }}
-        <table>
-            {{ form.as_table }}
-        </table>
+    <div class="container">
+        <form action="{% url 'customAuth:registrar' %}" method="post">
+            {% csrf_token %}
+
+            {% for hidden_field in form.hidden_fields %}
+                {{ hidden_field }}
+            {% endfor %}
+
+            <div class="form-group row">
+                <label for="{{ form.username.id_for_label }}"
+                       class="col-2 col-form-label">{{ form.username.label }}:</label>
+                {% render_field form.username class="form-control col-3" %}
+            </div>
+            <div class="form-group row">
+                <label for="{{ form.email.id_for_label }}" class="col-2 col-form-label">{{ form.email.label }}:</label>
+                {% render_field form.email class="form-control col-3" %}
+            </div>
+            <div class="form-group row">
+                <label for="{{ form.password.id_for_label }}"
+                       class="col-2 col-form-label">{{ form.password.label }}:</label>
+                {% render_field form.password class="form-control col-3" %}
+            </div>
+            <div class="form-group row">
+                <label for="{{ form.esAdmin.id_for_label }}"
+                       class="col-2 col-form-label form-check-label">{{ form.esAdmin.label }}:</label>
+                <label class="switch">
+                    {% render_field form.esAdmin %}
+                    <span class="slider round"></span>
+                </label>
+            </div>
+            <button type="submit" class="btn btn-primary">Acceder</button>
+        </form>
         <br>
-        <input type="submit" value="Enviar">
-    </form>
-    <br>
-    <form action="{% url 'Inventario:index' %}">
-        <input type="submit" value="Volver">
-    </form>
+        <form action="{% url 'Inventario:index' %}">
+            <button type="submit" class="btn btn-secondary">Volver</button>
+        </form>
+    </div>
+    <style>
+    </style>
 {% endblock %}
