--- a/templates/Inventario/landingPageAdministrador.html
+++ b/templates/Inventario/landingPageAdministrador.html
@@ -16,5 +16,60 @@
     </div>
     <div class="relative"><h3>Administrador</h3></div>
     <hr>
+    <h3>Reservas</h3>
+    {% if reservas %}
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Fecha creacion</th>
+                <th>Nombre solicitante</th>
+                <th>Objeto</th>
+                <th>Fecha de reserva</th>
+                <th>Inicio</th>
+                <th>Termino</th>
+            </tr>
+            {% for reserva in reservas %}
+                <tr>
+                    <td>{{ reserva.id }}</td>
+                    <td>{{ reserva.fechaCreacion }}</td>
+                    <td>{{ reserva.solicitante.nombre }}  {{ reserva.solicitante.apellido }}</td>
+                    <td>{{ reserva.nombreItem }}</td>
+                    <td>{{ reserva.fechaReserva }}</td>
+                    <td>{{ reserva.horaInicio }}</td>
+                    <td>{{ reserva.horaTermino }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>No se encontraron reservas.</p>
+    {% endif %}
+    <hr>
+    <h3>Préstamos</h3>
+    {% if prestamos %}
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Nombre solicitante</th>
+                <th>Objeto</th>
+                <th>Fecha de prestamo</th>
+                <th>Inicio</th>
+                <th>Termino</th>
+                <th>Estado</th>
+            </tr>
+            {% for prestamo in prestamos %}
+                <tr>
+                    <td>{{ prestamo.id }}</td>
+                    <td>{{ prestamo.solicitante.nombre }} {{ prestamo.solicitante.apellido }}</td>
+                    <td>{{ prestamo.nombreItem }}</td>
+                    <td>{{ prestamo.fechaPrestamo }}</td>
+                    <td>{{ prestamo.horaInicio }}</td>
+                    <td>{{ prestamo.horaTermino }}</td>
+                    <td>{{ prestamo.estado }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    {% else %}
+        <p>No se encontraron prestamos.</p>
+    {% endif %}
 
 {% endblock %}
