Se agrega a la view de landing page para administrador una forma de obtener el día presente, el lunes de esa semana y el domingo de la misma. También se agrega para el contexto las reservas que van a ir en la grilla que estan filtradas por la semana
Signed-off-by: Spike <javierluciano1997@hotmail.com>

--- a/templates/Inventario/landingPageAdministrador.html
+++ b/templates/Inventario/landingPageAdministrador.html
@@ -71,5 +71,6 @@
     {% else %}
         <p>No se encontraron prestamos.</p>
     {% endif %}
+    <h1>lunes: {{ lunes }} - domingo: {{ domingo }}</h1>
 
 {% endblock %}
