--- a/templates/base.html
+++ b/templates/base.html
@@ -1,33 +1,68 @@
+{% load static %}
 <!DOCTYPE html>
-<html>
+<html style="display:none">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
           integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"
+            integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+            crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{% static 'Inventario/css/base.css' %}">
     {% block extra_head %}{% endblock %}
     <title>{% block title %} Inventario WebApp {% endblock %}</title>
 </head>
 <body>
-{% if user.is_authenticated %}
-    <p><a href="{% url 'Inventario:index' %}">Home</a> ::
-        {{ user.username }} :: {{ user.email }} ::
-        <a href="{% url 'Inventario:perfilUsuario' %}">Mi Perfil</a> ::
-        <a href="{% url 'customAuth:logout' %}">Logout</a>
-    </p>
-{% endif %}
-<main>
-    {% block content %}
-    {% endblock %}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-            integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-            crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-            integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-            crossorigin="anonymous"></script>
-</main>
+
+<nav class="navbar navbar-expand-md navbar-light border-bottom">
+    <a class="navbar-brand" href="{% url 'Inventario:index' %}"><img
+            src="http://www.cei.cl/wp-content/uploads/2014/12/Logo-Cei.png" id="cei-logo"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse"
+            data-target="#navbar">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="navbar-collapse collapse justify-content-end" id="navbar">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'Inventario:index' %}">
+                    <i class="fas fa-home fa-2x"></i>
+                </a>
+            </li>
+            {% if user.is_authenticated %}
+                <li class="nav-item navbar-text text-right" style="font-size:13px">
+                    <span style="font-size:16px">{{ user.nombre }} {{ user.apellido }}</span><br>
+                    {{ user.username }}<br>
+                    {{ user.email }}
+                </li>
+                {% if not user.esAdmin %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'Inventario:perfilUsuario' %}">Mi Perfil</a>
+                    </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'customAuth:logout' %}">Logout</a>
+                </li>
+
+            {% endif %}
+        </ul>
+    </div>
+</nav>
+<div class="container-fluid">
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
+        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+        crossorigin="anonymous"></script>
+<script src="{% static 'Inventario/js/base.js' %}"></script>
 </body>
 </html>
