--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-md navbar-light border-bottom">
+<nav class="navbar navbar-expand-md navbar-light border-bottom border-top border-dark">
     <a class="navbar-brand" href="{% url 'Inventario:index' %}"><img
             src="http://www.cei.cl/wp-content/uploads/2014/12/Logo-Cei.png" id="cei-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse"
