--- a/templates/Inventario/perfilUsuario.html
+++ b/templates/Inventario/perfilUsuario.html
@@ -6,34 +6,38 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Perfil de Usuario</h1>
-    <h4>Reservas</h4>
-    {% if reservas %}
-        <table>
-            {% for reserva in reservas %}
-                <tr>
-                    <td>{{ reserva.nombreItem }}</td>
-                    <td>{{ reserva.horaInicio }}</td>
-                    <td>{{ reserva.horaTermino }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-    {% else %}
-        <p>No se encontraron reservas.</p>
-    {% endif %}
-    <h4>Préstamos</h4>
-    {% if prestamos %}
-        <table>
-            {% for prestamo in prestamos %}
-                <tr>
-                    <td>{{ prestamo.nombreItem }}</td>
-                    <td>{{ prestamo.horaInicio }}</td>
-                    <td>{{ prestamo.horaTermino }}</td>
-                    <td>{{ prestamo.estado }}</td>
-                </tr>
-            {% endfor %}
-        </table>
-    {% else %}
-        <p>No se encontraron prestamos.</p>
-    {% endif %}
+
+    <div class="row justify-content-center align-items-center">
+        <div class="col-5">
+            <a href="{% url 'Inventario:index' %}" class="btn btn-info btn-lg btn-block" role="button">Reserva Tu
+                Espacio</a>
+        </div>
+        <div class="col-5">
+            <a href="{% url 'Inventario:index' %}" class="btn btn-info btn-lg btn-block" role="button">Pide Tu
+                Artículo</a>
+        </div>
+    </div>
+    <div class="row justify-content-center align-items-center">
+        <div class="btn-group col-3">
+            <button type="button" class="col btn btn-success">Reserva</button>
+            <button type="button" class="col btn btn-secondary">Préstamos</button>
+        </div>
+        <button type="button" class="col-2 btn btn-danger">Eliminar Seleccionados</button>
+    </div>
+
+    <div class="row justify-content-center align-items-centerow">
+        <div class="col-4">
+            <table class="table table-hover">
+                <tbody>
+                {% for reserva in reservas %}
+                    <tr>
+                        <td>{{ reserva.nombreItem }}</td>
+                        <td>Disponible</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <span class="col-4">Hola</span>
+    </div>
 {% endblock %}
