--- a/templates/base.html
+++ b/templates/base.html
@@ -63,6 +63,22 @@
         {% block content %}
         {% endblock %}
     </main>
+    {% if alerta %}
+        <div class="row justify-content-center align-items-center">
+            <div class="col-6">
+                <div id="myAlert" class="alert alert-dismissible fade
+                    {% if tipoAlerta == 'error' %} alert-danger
+                    {% elif tipoAlerta == 'success' %} alert-success
+                    {% endif %}"
+                     role="alert">
+                    {{ alerta }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 </div>
 </body>
 </html>
