Se modificaron los archivos landingPageUsuario.html y urls (aparecen los articulos como botones despues de la busqueda y llevan a la ficha del articulo)

--- a/Inventario/static/Inventario/css/lpusuario.css
+++ b/Inventario/static/Inventario/css/lpusuario.css
@@ -68,3 +68,9 @@ body{
     color: white;
     background-color: green;
 }
+
+#resultado {
+    position: relative;
+        top: 100px;
+        left: -765px;
+}
