Sistema de notificaciones usando messages de django, formas/vistas/templates de creacion/modificacion/eliminacion para los modelos

--- a/Inventario/static/Inventario/css/base.css
+++ b/Inventario/static/Inventario/css/base.css
@@ -17,3 +17,16 @@
     width: 80px;
     height: 80px;
 }
+
+#myAlert {
+    position: fixed;
+    bottom: 10px;
+    width: 50%;
+    z-index: 999;
+}
+
+main::after {
+    clear: both;
+    content: "";
+    display: table;
+}
