--- a/templates/Inventario/espacio_form.html
+++ b/templates/Inventario/espacio_form.html
@@ -1,15 +1,52 @@
 {% extends 'base.html' %}
+{% load static %}
+{% load widget_tweaks %}
 
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Enviar">
-    </form>
-    {% if object %}
-        <form action="{% url 'Inventario:espacioDelete' object.pk %}" method="post">
-            {% csrf_token %}
-            <input type="submit" value="Eliminar">
-        </form>
-    {% endif %}
+    <div class="col-md-8 offset-md-2">
+        <div class="card card-outline-secondary">
+            <div class="card-header">
+                <h3 class="mb-0">{% if object %}Datos del Espacio{% else %}Registrar Espacio{% endif %}</h3>
+            </div>
+            <div class="card-body">
+                <form method="post" class="form" role="form">
+                    {% csrf_token %}
+                    {% for field in form.visible_fields %}
+                        <div class="form-group row">
+                            <label for="{{ field.id_for_label }}"
+                                   class="col-lg-3 col-form-label form-control-label">{{ field.label }}</label>
+                            <div class="col-lg-9">
+                                {% if form.is_bound %}
+                                    {% if field.errors %}
+                                        {% render_field field class="form-control is-invalid" %}
+                                        {% for error in field.errors %}
+                                            <small class="form-text text-danger">{{ error }}</small>
+                                        {% endfor %}
+                                    {% else %}
+                                        {% render_field field class="form-control is-valid" %}
+                                    {% endif %}
+                                {% else %}
+                                    {% render_field field class="form-control" %}
+                                {% endif %}
+                                {% if field.help_text %}
+                                    <small class="form-text text-muted">{{ field.help_text }}</small>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% endfor %}
+                    <div class="form-group row">
+                        <label class="col-lg-3 col-form-label form-control-label"></label>
+                        <div class="col-lg-9">
+                            <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
+                            <input type="submit" class="btn btn-primary" value="Guardar">
+                            {% if object %}
+                                <a href="{% url 'Inventario:espacioDelete' object.pk %}" class="btn btn-danger">Eliminar
+                                    Espacio</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
