Templates para eliminar modelos, forma/vista/template para cambio de contraseña

--- a/templates/Inventario/password_change.html
+++ b/templates/Inventario/password_change.html
@@ -2,11 +2,10 @@
 {% load widget_tweaks %}
 
 {% block content %}
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-6 offset-md-3">
         <div class="card border-secondary">
             <div class="card-header border-secondary">
-                <h3 class="mb-0">{% if object %}{% block update_title %}{% endblock %}{% else %}{% block create_title %}
-                {% endblock %}{% endif %}</h3>
+                <h3 class="mb-0">Cambio de Contraseña</h3>
             </div>
             <div class="card-body">
                 <form method="post" class="form" role="form">
@@ -37,7 +36,8 @@
                     <div class="form-group row">
                         <label class="col-lg-3 col-form-label form-control-label"></label>
                         <div class="col-lg-9">
-                            {% block buttons %}{% endblock %}
+                            <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Cancelar</a>
+                            <input type="submit" class="btn btn-primary" value="Cambiar Contraseña">
                         </div>
                     </div>
                 </form>
