--- a/templates/Inventario/reserva_confirm_delete.html
+++ b/templates/Inventario/reserva_confirm_delete.html
@@ -1,5 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'Inventario/confirm_delete_template.html' %}
 
-{% block content %}
-
+{% block delete_title %}Eliminar Reserva{% endblock %}
+{% block buttons %}
+    <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Cancelar</a>
+    <input type="submit" class="btn btn-info" value="Eliminar">
 {% endblock %}
