Validacion de formularios, cambio al modelo de prestamo

--- a/templates/Inventario/articulo_form.html
+++ b/templates/Inventario/articulo_form.html
@@ -1,6 +1,6 @@
 {% extends 'Inventario/form_template.html' %}
 
-{% block create_title %}Datos del Artículo{% endblock %}
+{% block create_title %}Editar Artículo{% endblock %}
 {% block update_title %}Registrar Artículo{% endblock %}
 {% block buttons %}
     <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
