--- a/templates/Inventario/reserva_form.html
+++ b/templates/Inventario/reserva_form.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block create_title %}Registrar Reserva{% endblock %}
-{% block update_title %}Datos de la Reserva{% endblock %}
+{% block update_title %}Editar Reserva{% endblock %}
 {% block buttons %}
     <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
     <input type="submit" class="btn btn-primary" value="Guardar">
