--- a/templates/Inventario/usuario_form.html
+++ b/templates/Inventario/usuario_form.html
@@ -1,7 +1,7 @@
 {% extends 'Inventario/form_template.html' %}
 
 {% block create_title %}Registrar Usuario{% endblock %}
-{% block update_title %}Datos del Usuario{% endblock %}
+{% block update_title %}Editar Usuario{% endblock %}
 {% block buttons %}
     <a href="{% url 'Inventario:index' %}" class="btn btn-secondary">Volver</a>
     <input type="submit" class="btn btn-primary" value="Guardar">
